--- a/style.css
+++ b/style.css
@@ -7,19 +7,27 @@
 }
 
 body {
-  margin: 0;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 0;
+  box-sizing: border-box;
 }
 
-/* Shared Style */
+/* Shared Styles */
+.display-flex{
+  display: flex;
+}
 .text-center {
   text-align: center;
 }
 .secondary-bg {
   background-color: black;
 }
+.primary-color{
+  color:#3bb905;
+}
 .text-primary{
-  color: #FD6E0A;
+  color: #3bb905;
 }
 .text-secondary {
   color: white;
@@ -44,47 +52,65 @@ body {
 }
 
 .btn-primary {
-  background-color: #FD6E0A;
-  font-size: 20px;
+  background-color: #3bb905;
+  font-size: 16px;
   font-weight: bold;
   color: white;
-  padding: 18px 35px;
+  padding: 10px 20px;
   border-radius: 5px;
   border: none;
-  margin-right: 30px;
+}
+.btn-primary:hover{
+    background-color: #000000;
+    color: white;
+    border: 1px solid #3bb905;
+}
+.btn-secondary {
+  background-color: #000000;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: 1px solid #3bb905;
+  cursor: pointer;
+}
+.btn-secondary:hover {
+  background-color: #3bb905;
 }
 
 /* Header Styles */
-.header {
-  background-image: url(images/developer.png);
-  padding: 0 100px 50px 200px;
-  margin-bottom: 0;
-}
+header{
+  padding: 20px 40px 80px 40px;
 
+}
 /* Navbar Styles */
-nav {
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0px 150px;
+}
+.nav-logo-title{
+  align-items: center;
+  gap: 8px;
+}
+.nav-logo{
+  width: 70px;
+  height: 70px;
 }
 .nav-title {
-  font-weight: 800;
+  font-weight: bold;
   font-size: 45px;
-  margin-left: 100px;
   color: white;
 }
 span {
-  color: #FD6E0A;
+  color: #3bb905;
 }
 .nav-menu {
   display: flex;
-  gap: 50px;
+  gap: 30px;
   align-items: center;
   font-size: 20px;
-  background-color: #1e1e1e;
-  border-radius: 10px;
-  padding: 15px 10px;
 }
 .nav-menu li {
   list-style: none;
@@ -94,68 +120,40 @@ span {
   color:white;
 }
 .nav-menu li a:hover {
-color: #f77b23;
+color: #3bb905;
 }
-.btn-secondary {
-  background-color: #000000;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  padding: 18px 35px;
-  border-radius: 5px;
-  border: 1px solid #FD6E0A;
-  margin-right: 30px;
-  cursor: pointer;
-}
-.btn-secondary:hover {
-  background-color: #FD6E0A;
-}
+
 
 
 /* Banner Styles */
 .banner {
   display: flex;
-  margin: 0 30px 0 250px;
   justify-content: space-between;
 }
 .banner-greetings {
-  font-size: 45px;
-  font-weight: 600;
-  color: #FD6E0A;
+  font-size: 30px;
+  font-weight: bold;
+  color: #3bb905;
  }
  .banner-title {
-   font-size: 85px;
+   font-size: 72px;
    font-weight: bold;
+   margin: 0;
  }
 .banner-content {
   font-size: 30px;
-  margin-bottom: 50px;
 }
 
 .social-icon {
 margin-bottom: 20px;
 }
 .social-icon a img {
-width: 50px;
+width: 24px;
 }
-
-.btn-hello {
-  background-color: #000000;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  padding: 18px 35px;
-  border-radius: 5px;
-  border: 1px solid #FD6E0A;
-  margin-right: 30px;
-  cursor: pointer;
+.hello-btn{
+  margin-right: 10px;
 }
-.btn-hello:hover {
-  background-color: #FD6E0A;
-}
-
 .banner-profile-pic {
   height: 450px;
   width: 400px;
-  margin-right: 98px;
 }
