--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   background-color: black;
 }
 .primary-color{
-  color:#3bb905;
+  color:#1d5504;
 }
 .text-primary{
   color: #3bb905;
@@ -112,16 +112,7 @@ span {
   align-items: center;
   font-size: 20px;
 }
-.nav-menu li {
-  list-style: none;
-}
-.nav-menu li a {
-  text-decoration: none;
-  color:white;
-}
-.nav-menu li a:hover {
-color: #3bb905;
-}
+
 
 
 
@@ -157,3 +148,5 @@ width: 24px;
   height: 450px;
   width: 400px;
 }
+
+/* Media Responsive for Small Device*/
